docs: automate direct GTNH exports